# packr

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/packr/: dir_entry.h  entry.h  ops.h  types.h  utils.h
src/: entry.c  main.c  ops.c  utils.c
tests/: basic.cpp  main.cpp
tests/exp_test/: CMakeLists.txt  test1.c
tests/pack_test/: CMakeLists.txt  test1.c
tests/test_data/pack_test/: symlink
tests/test_data/pack_test/inner/inner/inner/inner/: text
